# rvprio

./: .gitignore  .pre-commit-config.yaml  .pylintrc  COMMIT_CONVENTION.md  Makefile  README.md  pyproject.toml  requirements.txt  rvprio.py
case-study/: README.md  dataset.csv
code/: cross_validation.py  metric.py
data/: README.md
data/case-study/: README.md  dataset_prioritized.csv  dataset_prioritized_hrchy.csv  manual_inspection.csv  subjects.csv
data/case-study/targets/apache.activemq-artemis/org/apache/activemq/artemis/selector/strict/: SimpleCharStream.java
datasets/: README.md  features_selected.csv
docs/: C4_Component.puml  constants.puml  index.html  rvprio.puml  rvprio_constants.puml  systemcontext.puml
hooks/: commit-msg.sh
papers/ICST-20/: README.md
papers/ICST-20/code/: cross_validation.py
papers/ICST-20/data/: README.md  features_selected.data  training.csv
papers/ICST-20/results/: README.md
rvprio/: cli.py  filesystem.py  models.py  rvprio_clf.pkl  validator.py
rvprio/kernels/: javamop.py  javamop_models.py
rvprio/plugins/: method_analyzer.py  pmd.py
