[tool.poetry]
name = "rvprio"
version = "0.1.0"
description = "Runtime Verification priorizer."
authors = ["Lucas Cabral <lucascostacabra@gmail.com>"]
license = "GPLv2"

[tool.poetry.scripts]
rvprio = "rvprio.cli:run"

[tool.poetry.dependencies]
python = "^3.9"
docopt = "0.6.2"
Cerberus = "1.3.2"
lizard = "1.15.7"
pandas = "1.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
